--- a/VMExit Hypervisor/VMExit Hypervisor.vcxproj.filters
+++ b/VMExit Hypervisor/VMExit Hypervisor.vcxproj.filters
@@ -52,4 +52,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <MASM Include="Source\helpers.asm">
+      <Filter>Source Files</Filter>
+    </MASM>
+  </ItemGroup>
 </Project>
